@@ -2,6 +2,7 @@ Revision history for perl distribution Mojolicious-Plugin-AssetPack
 
 2.06 Not Released
  - Fix deprecated coffee-script@1.12.7: CoffeeScript on NPM has moved to coffeescript
+ - Fix RollupJs pipe compatible with new rollupjs #138
 
 2.05 2018-08-01T14:19:35+0800
  - Fix s///r is not supported in older Perls #136
